# lysa_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: agilitysdk.cmake  jolt.cmake  libraries.cmake  shaders.cmake
docs/: doxypress.json
docs/manual/: 000_manual.dox
include/lysa/: Libraries.h
include/lysa/os/windows/: Libraries.h
src/hlslpp/include/hlsl++/: vector_int_type.h  vector_uint_type.h
src/hlslpp/include/hlsl++/transform/: common.h
src/hlslpp/module/: hlsl++.ixx
src/lysa/: AABB.cpp  AABB.ixx  Application.cpp  Application.ixx  ApplicationConfig.ixx  AssetsPack.cpp  AssetsPack.ixx  AsyncQueue.cpp  AsyncQueue.ixx  AsyncQueues.cpp  AsyncQueues.ixx  Configuration.ixx  Constants.ixx  Enums.ixx  Exception.ixx  Frustum.cpp  Frustum.ixx  FrustumCulling.cpp  FrustumCulling.ixx  Global.cpp  Global.ixx  Input.cpp  Input.ixx  InputEvent.ixx  Loader.cpp  Loader.ixx  Log.cpp  Log.ixx  Lysa.cpp  Lysa.ixx  Math.cpp  Math.ixx  Memory.cpp  Memory.ixx  Object.cpp  Object.ixx  Physics.ixx  Resources.cpp  Resources.ixx  ResourcesManager.cpp  (+26 more)
src/lysa/depends/hlslpp/module/: hlsl++.ixx
src/lysa/editors/: blender_lysa_addon.py
src/lysa/nodes/: AnimationPlayer.cpp  AnimationPlayer.ixx  Camera.cpp  Camera.ixx  Character.cpp  Character.ixx  CollisionArea.cpp  CollisionArea.ixx  CollisionObject.cpp  CollisionObject.ixx  DirectionalLight.cpp  DirectionalLight.ixx  Environment.cpp  Environment.ixx  KinematicBody.cpp  KinematicBody.ixx  Light.cpp  Light.ixx  MeshInstance.cpp  MeshInstance.ixx  Node.cpp  Node.ixx  OmniLight.cpp  OmniLight.ixx  PhysicsBody.cpp  PhysicsBody.ixx  RayCast.cpp  RayCast.ixx  RigidBody.cpp  RigidBody.ixx  SpotLight.cpp  SpotLight.ixx  StaticBody.cpp  StaticBody.ixx  Viewport.ixx
src/lysa/os/win32/: Application.cpp  Input.cpp  Window.cpp  mappings.h
src/lysa/os/windows/: Win32Window.cpp  Win32Window.ixx  WindowsSurface.cpp  WindowsSurface.ixx
src/lysa/physics/: Configuration.ixx  PhysicsEngine.cpp  PhysicsEngine.ixx  PhysicsMaterial.ixx
src/lysa/physics/jolt/: Character.cpp  CollisionArea.cpp  CollisionObject.cpp  ConvexHullShape.cpp  KinematicBody.cpp  MeshShape.cpp  PhysicsBody.cpp  PhysicsEngine.cpp  PhysicsEngine.ixx  RayCast.cpp  RigidBody.cpp  Shape.cpp  StaticBody.cpp  StaticCompoundShape.cpp
src/lysa/physics/physx/: Character.cpp  CollisionArea.cpp  CollisionObject.cpp  ConvexHullShape.cpp  KinematicBody.cpp  MeshShape.cpp  PhysicsBody.cpp  PhysicsEngine.cpp  PhysicsEngine.ixx  RayCast.cpp  RigidBody.cpp  Shape.cpp  StaticBody.cpp  StaticCompoundShape.cpp
src/lysa/pipelines/: DrawCommandSort.cpp  DrawCommandSort.ixx  FrustumCulling.cpp  FrustumCulling.ixx
src/lysa/renderer/: DeferredSceneRenderer.ixx  ForwardRenderer.cpp  ForwardRenderer.ixx  MeshesRenderer.cpp  MeshesRenderer.ixx  Renderer.cpp  Renderer.ixx
src/lysa/renderer/renderpass/: ForwardColorPass.cpp  ForwardColorPass.ixx  GammaCorrection.cpp  GammaCorrection.ixx  PostProcessing.cpp  PostProcessing.ixx  Renderpass.cpp  Renderpass.ixx
src/lysa/renderers/: DebugRenderer.cpp  DebugRenderer.ixx  DeferredRenderer.cpp  DeferredRenderer.ixx  ForwardRenderer.cpp  ForwardRenderer.ixx  MeshesRenderer.cpp  MeshesRenderer.ixx  OutlinesRenderer.cpp  OutlinesRenderer.ixx  Renderer.cpp  Renderer.ixx  Renderpass.ixx  Samplers.cpp  Samplers.ixx  SceneData.cpp  SceneData.ixx  SceneRenderer.ixx  UIRenderer.cpp  UIRenderer.ixx  VectorRenderer.cpp  VectorRenderer.ixx
src/lysa/renderers/renderpass/: DepthPrepass.cpp  DepthPrepass.ixx  ForwardColor.cpp  ForwardColor.ixx  GBufferPass.cpp  GBufferPass.ixx  GLightingPass.cpp  GLightingPass.ixx  LightingPass.cpp  LightingPass.ixx  PostProcessing.cpp  PostProcessing.ixx  Renderpass.cpp  Renderpass.ixx  SMAAPass.cpp  SMAAPass.ixx  SSAOPass.cpp  SSAOPass.ixx  ShaderMaterialPass.cpp  ShaderMaterialPass.ixx  ShadowMapPass.cpp  ShadowMapPass.ixx  TransparencyPass.cpp  TransparencyPass.ixx
src/lysa/resources/: Animation.cpp  Animation.ixx  AnimationLibrary.ixx  ConvexHullShape.cpp  ConvexHullShape.ixx  Font.cpp  Font.ixx  Image.cpp  Image.ixx  Material.cpp  Material.ixx  Mesh.cpp  Mesh.ixx  MeshShape.cpp  MeshShape.ixx  Resource.cpp  Resource.ixx  Shape.cpp  Shape.ixx  StaticCompoundShape.ixx  Texture.cpp  Texture.ixx
src/lysa/shaders/: debug.slang  default.vert.slang  deferred.inc.slang  depth_prepass.vert.slang  draw_commands.comp.slang  forward.frag.slang  forward.inc.slang  frustum_culling.comp.slang  gamma_correction.frag.slang  gbuffers.frag.slang  glighting.frag.slang  glyph.slang  glyph_ui.slang  lighting.inc.slang  mesh_sort.comp.slang  outlines.slang  pbr.inc.slang  postprocess.inc.slang  resources.inc.slang  samplers.inc.slang  scene.inc.slang  scene_data.inc.slang  transparency_oit.frag.slang  transparency_oit_composite.frag.slang  vector.inc.slang  vector.slang  vector_ui.slang
src/lysa/shaders/deferred/: deferred.inc.slang  gbuffers.frag.slang  ssao.frag.slang
src/lysa/shaders/forward/: forward.frag.slang  forward.inc.slang  forward_bloom.frag.slang  transparency_oit.frag.slang
src/lysa/shaders/lighting/: lighting.inc.slang
src/lysa/shaders/postprocess/: aces.frag.slang  blur.frag.slang  common.inc.slang  gamma_correction.frag.slang  greyscale.frag.slang  postprocess.inc.slang  reinhard.frag.slang
src/lysa/shaders/shadows/: shadowmap.frag.slang  shadowmap.inc.slang  shadowmap.vert.slang  shadowmap_cubemap.frag.slang  shadowmap_cubemap.slang  shadows.inc.slang
src/lysa/ui/: Button.cpp  Button.ixx  CheckWidget.cpp  CheckWidget.ixx  Event.ixx  Frame.cpp  Frame.ixx  Image.cpp  Image.ixx  Panel.ixx  Rect.ixx  Resource.ixx  ScrollBar.cpp  ScrollBar.ixx  Style.ixx  StyleClassic.cpp  StyleClassic.ixx  StyleClassicResource.cpp  Text.cpp  Text.ixx  TextEdit.cpp  TextEdit.ixx  ToggleButton.cpp  ToggleButton.ixx  TreeView.ixx  ValueSelect.cpp  Widget.cpp  Widget.ixx  Window.cpp  Window.ixx  WindowManager.cpp  WindowManager.ixx
